fix channel group wrapping

--- a/views/stylesheets/fixture.scss
+++ b/views/stylesheets/fixture.scss
@@ -32,8 +32,7 @@
   }
 }
 
-section.physical,
-.channel-groups {
+section.physical {
   -moz-columns: 2 300px;
   -moz-column-gap: 3rem;
   columns: 2 350px;
@@ -119,7 +118,7 @@ data.checkbox {
 /* display mode cards in a 2-col layout */
 @media (min-width: $tablet) {
   .card.fixture-mode {
-    width: calc(50% - .5em);
+    width: calc(50% - .5rem);
 
     & > h2 {
       white-space: nowrap;
@@ -128,14 +127,26 @@ data.checkbox {
     }
 
     &:nth-of-type(2n+1) {
-      margin-right: .5em;
+      margin-right: .5rem;
       float: left;
       clear: left;
     }
     &:nth-of-type(2n) {
-      margin-left: .5em;
+      margin-left: .5rem;
       float: right;
       clear: right;
+    }
+  }
+
+  .channel-groups > section {
+    width: calc(50% - 1.5em);
+    float: left;
+
+    &:nth-of-type(2n+1) {
+      margin-right: 1.5rem;
+    }
+    &:nth-of-type(2n) {
+      margin-left: 1.5rem;
     }
   }
 }
